# CSC481-581-M9

./: CMakeLists.txt  README.md
src/: PropertyTypes.hpp  main.cpp  solution.cpp
